deploy/license-server/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: janus-license
  labels:
    app.kubernetes.io/part-of: janus-license
